--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-
+<h1 style="text-align:center;">
+    <span style="font-family:'Arial', Times, serif;">Welcome To Devock v29</span>
+</h1>
+news and more will be displayed here
