--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1 style="text-align:center;">
-    <span style="font-family:'Arial', Times, serif;">Welcome To Devock v29</span>
+    <span style="font-family:'Arial', Times, serif;">devock video tab</span>
 </h1>
-news and more will be displayed here
+its empty here go back to news tab which is empty too
