--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <h1 style="text-align:center;">
-    <span style="font-family:'Arial', Times, serif;">devock video tab</span>
+    <span style="font-family:'Arial', Times, serif;">devock video and image tab</span>
 </h1>
 its empty here go back to news tab which is empty too
-https://www.youtube.com/watch?v=aBBbhwgltaI
+ <div class="section">
+            <img src="https://cdn.discordapp.com/attachments/1342962064838361240/1351605079924539402/image.png?ex=67dafbd2&is=67d9aa52&hm=949417a40851df064c9949c114cd4a7dc53bac370a181d826e4e44c26b64e5d2&" alt="Img 1"> <!--2nd Image-->
+            <p>random ass image</p>
+        </div>
