--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </h1>
 its empty here go back to news tab which is empty too
  <div class="section">
-            <img src="https://glitchdev1.github.io/devocknews/image1.jpg" alt="Img 1"> <!--2nd Image-->
+            <img src="https://glitchdev1.github.io/devocknews/image1.png" alt="Img 1"> <!--2nd Image-->
             <p>random ass image</p>
         </div>
