include snake.io

--- a/news.html
+++ b/news.html
@@ -2,3 +2,6 @@
         <h1>Devocky v29</h1>-- 
         <p>hacc</p>
     </div>
+ <li class="masthead__menu-item">
+          <a href="snake.io">Play Snake.io while server is in maintenance</a>
+        </li>
