--- a/news.html
+++ b/news.html
@@ -3,5 +3,5 @@
         <p>hacc</p>
     </div>
  <li class="masthead__menu-item">
-          <a href="snake.io">Play Snake.io while server is in maintenance</a>
+          <a href="https://snake.io">Play Snake.io while server is in maintenance</a>
         </li>
