--- a/news.html
+++ b/news.html
@@ -5,3 +5,6 @@
  <li class="masthead__menu-item">
           <a href="https://snake.io">Play Snake.io while server is in maintenance</a>
         </li>
+<li class="masthead__menu-item">
+          <a href="https://youtube.com/@KTRBS">KTR's Channel</a>
+        </li>
