--- a/index.html
+++ b/index.html
@@ -6,3 +6,6 @@ its empty here go back to news tab which is empty too
             <img src="https://glitchdev1.github.io/devocknews/image1.png" alt="Img 1"> <!--2nd Image-->
             <p>random ass image</p>
         </div>
+<video src="https://user-images.githubusercontent.com/169707/126715420-991ad821-9ac8-4b66-b79e-e0966e0f3a89.mp4" controls="controls" style="max-width: 730px;">
+</video>
+<p>trying to implement video</p>
