--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ its empty here go back to news tab which is empty too
             <img src="https://glitchdev1.github.io/devocknews/image1.png" alt="Img 1"> <!--2nd Image-->
             <p>random ass image</p>
         </div>
-<video src="https://glitchdev1.github.io/devocknews/video1.mp4" controls="controls" style="max-width: 730px;">
+<video src="https://glitchdev1.github.io/devocknews/moddingslander.mp4" controls="controls" style="max-width: 730px;">
 </video>
 <p>trying to implement video</p>
